...
                  ),
                  onChanged: (value){
                    cityName = value;
                    //print(cityName);
                  },
                  controller: locationController,
                  key: Key('weather_textfield'),
                ),
              ),
              TextButton(
                onPressed: () {
                  print(cityName);
                  locationController.clear();
                  //print(cityName);
                  Navigator.pop(context,cityName);
                },
                child: Text(
                  'Get Weather',
                  style: kButtonTextStyle,
                ),
              ),

            ],
          ),
...
