...
                  fontWeight: FontWeight.w400, fontSize: 38
                )
              ),),
            ),
            Row(
              mainAxisAlignment: MainAxisAlignment.spaceBetween,
              children: [IconButton(key: const Key('cityButton') ,onPressed: ()async{
                    var named = await Navigator.push(context, MaterialPageRoute(builder: (context){

                      return CityScreen();

                    }));
                    var weatherdata = await WeatherModel().getCityWeather(named);
...
